PROJECT (AcceSSL)

#SET (CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PREPROCESSOR_FLAGS_DEBUG "-D_DEBUG -DDEBUG")
SET(COMPILER_FLAGS_COMMON "-D_GNU_SOURCE -Wall -Wextra -fmessage-length=0")
IF(APPLE)
    SET(COMPILER_FLAGS_COMMON "${COMPILER_FLAGS_COMMON} -Wno-deprecated-declarations")
ENDIF()
SET(COMPILER_FLAGS_DEBUG "-g ${PREPROCESSOR_FLAGS_DEBUG}")
SET(COMPILER_FLAGS_RELEASE "-DNDEBUG -mtune=native -O3")
SET(COMPILER_FLAGS_PROFILE "-DNDEBUG -pg -g3 -mtune=native -O1 -fno-omit-frame-pointer")
SET(COMPILER_FLAGS_RELWITHDEBINFO "-DNDEBUG -g3 -mtune=native -O1 -fno-omit-frame-pointer")

SET(CMAKE_C_FLAGS "${COMPILER_FLAGS_COMMON} -Wstrict-prototypes")
SET(CMAKE_C_FLAGS_DEBUG "${COMPILER_FLAGS_DEBUG}")
SET(CMAKE_C_FLAGS_RELEASE "${COMPILER_FLAGS_RELEASE}")
SET(CMAKE_C_FLAGS_PROFILE "${COMPILER_FLAGS_PROFILE}")
SET(CMAKE_C_FLAGS_RELWITHDEBINFO "${COMPILER_FLAGS_RELWITHDEBINFO}")

SET(CMAKE_CXX_FLAGS "${COMPILER_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_DEBUG "${COMPILER_FLAGS_DEBUG}")
SET(CMAKE_CXX_FLAGS_RELEASE "${COMPILER_FLAGS_RELEASE}")
SET(CMAKE_CXX_FLAGS_PROFILE "${COMPILER_FLAGS_PROFILE}")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${COMPILER_FLAGS_RELWITHDEBINFO}")

SET(SRC_DIR src)
SET(EXTLIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)

SET(CMAKE_INSTALL_PREFIX /usr/)

LINK_DIRECTORIES(
    ${EXTLIB_DIR}/tomsfastmath
)

INCLUDE_DIRECTORIES(
    ${SRC_DIR}
    ${EXTLIB_DIR}/tomsfastmath/src/headers
)

ADD_SUBDIRECTORY (${SRC_DIR}/accessl-common)
ADD_SUBDIRECTORY (${SRC_DIR}/common)
ADD_SUBDIRECTORY (${SRC_DIR}/accessl-engine)
ADD_SUBDIRECTORY (${SRC_DIR}/accel)
ADD_SUBDIRECTORY (${SRC_DIR}/benchmark)
ADD_SUBDIRECTORY (${SRC_DIR}/sim)
ADD_SUBDIRECTORY (${SRC_DIR}/zeromq)
ADD_SUBDIRECTORY (${SRC_DIR}/crt2key)
