PROJECT (benchmark)

SET(BENCHMARK_SOURCE benchmark.cpp)

FIND_PACKAGE(Boost COMPONENTS thread program_options system)
FIND_PACKAGE(Glog REQUIRED)
FIND_PACKAGE(GMP REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)

INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIRS}
    ${GLOG_INCLUDE_DIR}
    ${GMP_INCLUDES}
    ${OPENSSL_INCLUDE_DIR}
)

ADD_EXECUTABLE(benchmark ${BENCHMARK_SOURCE})
TARGET_LINK_LIBRARIES(benchmark common ${OPENSSL_CRYPTO_LIBRARIES} ${GLOG_LIBRARY} ${Boost_LIBRARIES} ${GMP_LIBRARIES} dl pthread)
