PROJECT (sim)

SET(SIM_SOURCE simulator.cpp)

FIND_PACKAGE(Boost COMPONENTS program_options)
FIND_PACKAGE(Glog REQUIRED)

INCLUDE_DIRECTORIES(
    ${GLOG_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(simulator ${SIM_SOURCE})
TARGET_LINK_LIBRARIES(simulator ${GLOG_LIBRARY} ${Boost_LIBRARIES} pthread)
