PROJECT (zeromq)

FIND_PACKAGE(Boost COMPONENTS thread program_options system REQUIRED)
FIND_PACKAGE(Boost COMPONENTS random)
FIND_PACKAGE(Glog REQUIRED)
FIND_PACKAGE(GMP REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(ZMQ REQUIRED)
FIND_PACKAGE(Log4C REQUIRED)

SET(ACCESSLD_SOURCE accessld.cpp)
SET(ENGINE_SOURCE engine.cpp)
SET(WORKER_SOURCE worker.cpp)
SET(TEST_SOURCE test.cpp)
SET(BENCHMARK_SOURCE server_chooser_benchmark.cpp)
SET(COUNT_TREE_TEST_SOURCE count_tree_test.cpp)
SET(OPENSSL_ENGINE_LIB_SOURCE engine-openssl.cpp)

IF(NOT Boost_RANDOM_FOUND)
    SET(ENGINE_SOURCE ${ENGINE_SOURCE} random_device.cpp)
    SET(OPENSSL_ENGINE_LIB_SOURCE ${OPENSSL_ENGINE_LIB_SOURCE} random_device.cpp)
    SET(BENCHMARK_SOURCE ${BENCHMARK_SOURCE} random_device.cpp)
ENDIF(NOT Boost_RANDOM_FOUND)

IF(APPLE)
    SET(RT_LIB )
ELSE(APPLE)
    SET(RT_LIB rt)
ENDIF(APPLE)

INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIRS}
    ${GLOG_INCLUDE_DIR}
    ${GMP_INCLUDES}
    ${OPENSSL_INCLUDE_DIR}
    ${ZMQ_INCLUDE_DIR}
    ${LOG4C_INCLUDE_DIRS}
)

ADD_EXECUTABLE(test ${TEST_SOURCE})
TARGET_LINK_LIBRARIES(test ${GLOG_LIBRARY} ${ZMQ_LIBRARIES})

ADD_EXECUTABLE(chooser_benchmark ${BENCHMARK_SOURCE})
TARGET_LINK_LIBRARIES(chooser_benchmark ${GLOG_LIBRARY} ${Boost_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY})

ADD_EXECUTABLE(count_tree_test ${COUNT_TREE_TEST_SOURCE})

ADD_EXECUTABLE(accessld ${ACCESSLD_SOURCE})
TARGET_LINK_LIBRARIES(accessld ${GLOG_LIBRARY} ${ZMQ_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} pthread)

ADD_EXECUTABLE(engine ${ENGINE_SOURCE})
TARGET_LINK_LIBRARIES(engine ${GLOG_LIBRARY} ${ZMQ_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_LIBRARIES} pthread)

ADD_EXECUTABLE(worker ${WORKER_SOURCE})
TARGET_LINK_LIBRARIES(worker accel common accessl-common ${LOG4C_LIBRARIES} ${GMP_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARIES} ${GLOG_LIBRARY} ${Boost_THREAD_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SYSTEM_LIBRARIES} ${Boost_LIBRARIES} ${RT_LIB} pthread)

ADD_LIBRARY(accessl-openssl SHARED ${OPENSSL_ENGINE_LIB_SOURCE})
TARGET_LINK_LIBRARIES(accessl-openssl ${ZMQ_LIBRARIES} ${Boost_LIBRARIES} ${GLOG_LIBRARY})

INSTALL(TARGETS accessld engine worker
    RUNTIME DESTINATION bin
)

INSTALL(TARGETS accessl-openssl
    LIBRARY DESTINATION lib
)
